--- a/cluster02.yaml
+++ b/cluster02.yaml
@@ -5,7 +5,7 @@ apiVersion: kind.x-k8s.io/v1alpha4
 networking:
   ipFamily: dual
   disableDefaultCNI: true 
-  podSubnet: 10.2.0.0/16,2001:db8:20:0::/63
+  podSubnet: 10.2.0.0/16,2001:dead:20:0::/63
   serviceSubnet: 10.222.0.0/16,2001:beaf:2::/108
 nodes:
 - role: control-plane
