--- a/Containerlab/topology.yaml
+++ b/Containerlab/topology.yaml
@@ -56,9 +56,13 @@ topology:
       - ip route add fc00:0:3333::1/128 via fd00:172:100:100::1 dev net0
 
     cilium-srv6-lab-cluster01-worker:
-      kind: ext-container
-      image: wbitt/network-multitool
-     
+      kind: linux
+      image: nicolaka/netshoot:latest
+      network-mode: container:worker
+      labels:
+        vrf: vrf01
+      exec:
+      - ip addr add 10.1.1.1/24 dev net0
 
 # Note: BGP local peer is from control-plane only
 # node-ip: "172.200.200.2,fd00:172:200:200::2"
@@ -77,8 +81,13 @@ topology:
       - ip route add fc00:0:3333::1/128 via fd00:172:200:200::1 dev net0
 
     cilium-srv6-lab-cluster02-worker:
-      kind: ext-container
-      image: wbitt/network-multitool
+      kind: linux
+      image: nicolaka/netshoot:latest
+      network-mode: container:worker
+      labels:
+        vrf: vrf01
+      exec:
+      - ip addr add 10.2.2.1/24 dev net0
 
   links:
     - endpoints: ["pe1:Gi0-0-0-0", "pe2:Gi0-0-0-0"]
