--- a/cluster01.yaml
+++ b/cluster01.yaml
@@ -14,12 +14,4 @@ nodes:
     kind: InitConfiguration
     nodeRegistration:
       kubeletExtraArgs:
-        node-ip: "fd00:172:100:100::2"
-#BGP local peer address
-- role: worker
-  kubeadmConfigPatches:
-  - |
-    kind: JoinConfiguration
-    nodeRegistration:
-      kubeletExtraArgs:
-        node-ip: "10.1.1.1,2001:dead:10:1:1::1"
+        node-ip: "172.100.100.2,fd00:172:100:100::2"
