--- a/cluster02.yaml
+++ b/cluster02.yaml
@@ -14,12 +14,4 @@ nodes:
     kind: InitConfiguration
     nodeRegistration:
       kubeletExtraArgs:
-        node-ip: "fd00:172:200:200::2"
-#BGP local peer address
-- role: worker
-  kubeadmConfigPatches:
-  - |
-    kind: JoinConfiguration
-    nodeRegistration:
-      kubeletExtraArgs:
-        node-ip: "10.2.2.2,2001:dead:10:2:2::2"
+        node-ip: "172.200.200.2,fd00:172:200:200::2"
