--- a/Containerlab/topology.yaml
+++ b/Containerlab/topology.yaml
@@ -44,7 +44,7 @@ topology:
       - ip addr add fd00:172:100:100::2/64 dev net0
       # These static routes are needed because Cilium cannot import routes currently.
       - ip route add 2001::/16 via fd00:172:100:100::1 dev net0
-      - ip route add 10.0.0.0/8 via 172.100.100.1/24
+      - ip route add 10.0.0.0/8 via 172.100.100.1 dev net0
       # static route for route reflector
       - ip route add fc00:0:3333::1/128 via fd00:172:100:100::1 dev net0
 
@@ -58,7 +58,7 @@ topology:
       - ip addr add fd00:172:200:200::2/64 dev net0
       # These static routes are needed because Cilium cannot import routes currently.
       - ip route add 2001::/16 via fd00:172:200:200::1 dev net0
-      - ip route add 10.0.0.0/8 via 172.200.200.1/24        
+      - ip route add 10.0.0.0/8 via 172.200.200.1 dev net0        
       # static route for route reflector
       - ip route add fc00:0:3333::1/128 via fd00:172:200:200::1 dev net0
 
