switched back isis connected redistribute

--- a/Containerlab/pe02.cfg
+++ b/Containerlab/pe02.cfg
@@ -77,6 +77,7 @@ router isis TITAN
    !
   router-id Loopback0
   redistribute bgp 65000
+  redistribute connected level-1
   segment-routing srv6
    locator MAIN
    !
