added IPv6 RR to cilium

--- a/Containerlab/pe01.cfg
+++ b/Containerlab/pe01.cfg
@@ -1,15 +1,13 @@
-!! Building configuration
+!! Building configuration...
 !! IOS XR Configuration 7.10.2
-!! Last configuration change at Wed Apr  3 10:59:02 2024 by clab
+!! Last configuration change at Mon Sep 16 11:00:37 2024 by clab
 !
 hostname PE01
-
 username clab
  group root-lr
  group cisco-support
- secret clab
+ secret 10 $6$4plXy1RwczDuDy1.$xF0q47Y8XSLgxdmBse79YwCNHAZLmyV5BRysAtrSmzmqMLP9hWc3ZEgu57u.Qp8Ii5WtQ7OOfdHZiPM2ZnTyJ.
 !
-
 vrf MGMT-VRF
  description **MGMT-VRF**
  address-family ipv4 unicast
@@ -30,31 +28,32 @@ call-home
 netconf-yang agent
  ssh
 !
+interface Loopback0
+ description Lo0
+ ipv6 address fc00:0:1111::1/128
+!
 interface MgmtEth0/RP0/CPU0/0
  vrf MGMT-VRF
- ip address {{ .Env.MGMT_IP }}
+ ipv4 address 172.20.20.36 255.255.255.0
+ ipv6 address 2001:172:20:20::4/64
  load-interval 30
 !
-interface loopback0
- no shut
- description Lo0
- ipv4 address {{.Env.loopback_v4}}
- ipv6 address {{.Env.loopback_v6}}
-!    
-int Gig 0/0/0/0
- no shut
+interface GigabitEthernet0/0/0/0
  description towards PE02
- ipv6 address 2001:1:1:1::0/127
+ ipv6 address 2001:1:1:1::/127
 !
-int Gig 0/0/0/1
- no shut
+interface GigabitEthernet0/0/0/1
  description towards RR
- ipv6 address 2001:2:2:2::0/127
+ ipv6 address 2001:2:2:2::/127
 !
-int Gig 0/0/0/2
- no shut
+interface GigabitEthernet0/0/0/2
  description towards cilium-srv6-lab-cluster01-control-plane:net0
  ipv6 address fd00:172:100:100::1/64
+!
+route-policy PASS
+  pass
+  done
+end-policy
 !
 router static
  vrf MGMT-VRF
@@ -64,19 +63,18 @@ router static
  !
 !
 router isis TITAN
- net 49.0901.0000.0000.0001.00
  is-type level-1
+ net 49.0901.0000.0000.0001.00
  nsf ietf
- !
  address-family ipv6 unicast
   metric-style wide
   microloop avoidance segment-routing
   prefix-unreachable
    rx-process-enable
-   !
+  !
   router-id Loopback0
-  redistribute bgp 65000
   redistribute connected level-1
+  redistribute bgp 65000 level-1-2
   segment-routing srv6
    locator MAIN
    !
@@ -90,17 +88,15 @@ router isis TITAN
  interface GigabitEthernet0/0/0/0
   circuit-type level-1
   point-to-point
-  !
   address-family ipv6 unicast
    fast-reroute per-prefix
    fast-reroute per-prefix ti-lfa
    metric 1000
-  !       
+  !
  !
  interface GigabitEthernet0/0/0/1
   circuit-type level-1
   point-to-point
-  !
   address-family ipv6 unicast
    fast-reroute per-prefix
    fast-reroute per-prefix ti-lfa
@@ -110,6 +106,7 @@ router isis TITAN
 !
 router bgp 65000
  bgp router-id 1.1.1.1
+ bgp redistribute-internal
  bgp log neighbor changes detail
  address-family vpnv4 unicast
   vrf all
@@ -123,7 +120,8 @@ router bgp 65000
   segment-routing srv6
    locator MAIN
   !
-  redistribute isis TITAN
+  network fd00:1:e5::/48
+  redistribute isis TITAN level 1
  !
  address-family vpnv6 unicast
   vrf all
@@ -145,11 +143,7 @@ router bgp 65000
   remote-as 65000
   description ***iBGP peering template for TITAN RR***
   update-source Loopback0
-  address-family vpnv4 unicast
-   encapsulation-type srv6
-  !
-  address-family vpnv6 unicast
-   encapsulation-type srv6
+  address-family ipv6 unicast
   !
  !
  neighbor fc00:0:3333::1
@@ -171,14 +165,10 @@ segment-routing
    locator MAIN
     micro-segment behavior unode psp-usd
     prefix fc00:0:1111::/48
-
+   !
+  !
+ !
 !
-route-policy PASS
-  pass
-  done
-end-policy
-!
-
 netconf agent tty
 !
 ssh client vrf MGMT-VRF
